--- a/tamos/values.yaml
+++ b/tamos/values.yaml
@@ -1,11 +1,11 @@
-# Default values for weatherapp-weather.
+# Default values for tamos.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 2
-apikey: "" # Add your own API key here
+replicaCount: 1
+
 image:
-  repository: afakharany/weatherapp-weather
+  repository: nginx
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
@@ -38,7 +38,7 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 5000
+  port: 80
 
 ingress:
   enabled: false
